add Mart Mägi to the list of developers